--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- Bootstrap css  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <title>Md. Kawsar Hossain</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +46,38 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      $(document).ready(function () {
+        $("#menu").click(function () {
+          $(this).toggleClass("fa-times");
+          $("header").toggleClass("toggle");
+        });
+
+        $(window).on("scroll load", function () {
+          $("#menu").removeClass("fa-times");
+          $("header").removeClass("toggle");
+
+          if ($(window).scrollTop() > 0) {
+            $(".top").show();
+          } else {
+            $(".top").hide();
+          }
+        });
+
+        // smooth scrolling
+
+        $('a[href*="#"]').on("click", function (e) {
+          e.preventDefault();
+
+          $("html, body").animate(
+            {
+              scrollTop: $($(this).attr("href")).offset().top,
+            },
+            500,
+            "linear"
+          );
+        });
+      });
+    </script>
   </body>
 </html>
